--- a/postit/package.json
+++ b/postit/package.json
@@ -10,16 +10,19 @@
   },
   "dependencies": {
     "next": "13.5.4",
+    "prisma": "^5.3.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "save-dev": "^0.0.1-security",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.8.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5"
+    "typescript": "^5.2.2"
   }
 }
